# CustomizeOrderManagementProgram

./: .gitignore  CMakeLists.txt  LICENSE  PeerReviewByAsh.md  README.md  main.cpp
.github/workflows/: cmake.yml
CIS25_FirstProject/: main.cpp
CIS25_FirstProject/OrderManagement/: addOrder.cpp  addOrder.hpp  deleteOrder.cpp  deleteOrder.hpp  displayOrders.cpp  getValidDouble.cpp  getValidInt.cpp  globalVariable.cpp  menu.cpp  menu.hpp  printOrders.cpp  searchOrder.cpp  setupCustomerFields.cpp  setupCustomerFields.hpp  setupProducts.cpp
include/: deleteOrder.hpp  displayOrders.hpp  getValidDouble.hpp  getValidInt.hpp  globalVariable.hpp  printOrders.hpp  searchOrder.hpp  setupProducts.hpp
src/: addOrder.cpp  deleteOrder.cpp  displayOrders.cpp  getValidDouble.cpp  getValidInt.cpp  globalVariable.cpp  menu.cpp  printOrders.cpp  searchOrder.cpp  setupCustomerFields.cpp  setupProducts.cpp
tests/: orders_tests.cpp
